right aligned button fixes for firefox

--- a/src/main/cool/src/assets/css/cool-custom.css
+++ b/src/main/cool/src/assets/css/cool-custom.css
@@ -1200,6 +1200,14 @@ span[class*="display-"] {
 }
 
 /* helpers */
+.btns-right .btn + .btn {
+  margin-right: 10px;
+}
+.btns-right {
+  width: 30%;
+  direction: rtl;
+}
+
 .borderless {
   border: none !important;
 }
